style: fix vertical align of app source tree expand icon (#2538)

--- a/app/common/renderer/assets/stylesheets/main.css
+++ b/app/common/renderer/assets/stylesheets/main.css
@@ -89,7 +89,7 @@ body::-webkit-scrollbar-corner {
 
 .ant-tree-switcher-icon {
   font-size: 14px !important;
-  vertical-align: sub !important;
+  vertical-align: middle !important;
 }
 
 .ant-switch-inner-checked,
